bug fix, error stream was preventing large projects from being tested